unpackaged/main/default/objects/Feedback_Form__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Feedback Forms</relationshipLabel>
    <relationshipName>Feedback_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>