unpackaged/main/default/objects/Feedback_Form__c/fields/Ease_of_dealing_with_OEM_customers__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_dealing_with_OEM_customers__c</fullName>
    <inlineHelpText>On a scale of 1 to 10 – How easy does MX make it to deal with your OEM customers?</inlineHelpText>
    <label>Ease of dealing with OEM customers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>