unpackaged/main/default/objects/Feedback_Form__c/fields/Ease_of_finding_help__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_finding_help__c</fullName>
    <inlineHelpText>On a scale of 1 to 10 - How easy it is to log a support enquiry or search for help when required?</inlineHelpText>
    <label>Ease of finding help</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>