unpackaged/main/default/objects/Feedback_Form__c/fields/Email_frequency__c.field-meta.xml
<CustomField>
    <fullName>Email_frequency__c</fullName>
    <inlineHelpText>On a scale of 1 to 10 – How helpful do you find the email notification frequency?</inlineHelpText>
    <label>Email frequency</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>