unpackaged/main/default/objects/Feedback_Form__c/fields/Experience_of_other_file_transfer_tools__c.field-meta.xml
<CustomField>
    <fullName>Experience_of_other_file_transfer_tools__c</fullName>
    <inlineHelpText>What are your experiences of using other file transfer tools? Do you use any other file transfer?</inlineHelpText>
    <label>Experience of other file transfer tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Wetransfer</fullName>
            </value>
            <value>
                <fullName>SFTP</fullName>
            </value>
            <value>
                <fullName>Files.com</fullName>
            </value>
            <value>
                <fullName>OFTP</fullName>
            </value>
            <value>
                <fullName>PLM Integrated</fullName>
            </value>
            <value>
                <fullName>Home Grown</fullName>
            </value>
            <value>
                <fullName>Hightail</fullName>
            </value>
            <value>
                <fullName>Sharefile</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>TruExchange</fullName>
            </value>
            <value>
                <fullName>Galaxkey</fullName>
            </value>
            <value>
                <fullName>Other Cloud Based</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>