unpackaged/main/default/objects/Feedback_Form__c/fields/Importance_of_Audit_Trail__c.field-meta.xml
<CustomField>
    <fullName>Importance_of_Audit_Trail__c</fullName>
    <inlineHelpText>On a scale of 1 to 10 - How important is it to have an audit trail of your data transactions?</inlineHelpText>
    <label>Importance of Audit Trail</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>