unpackaged/main/default/objects/Feedback_Form__c/fields/Improvements__c.field-meta.xml
<CustomField>
    <fullName>Improvements__c</fullName>
    <inlineHelpText>What suggestions would you make for us to improve that score?</inlineHelpText>
    <label>Improvements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>