unpackaged/main/default/objects/Feedback_Form__c/fields/MX_Interface__c.field-meta.xml
<CustomField>
    <fullName>MX_Interface__c</fullName>
    <inlineHelpText>On a scale from 1 to 10 - How easy do you find the MX Interface to work with?</inlineHelpText>
    <label>MX Interface</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>