unpackaged/main/default/objects/Feedback_Form__c/fields/Reliability_of_upload_download__c.field-meta.xml
<CustomField>
    <fullName>Reliability_of_upload_download__c</fullName>
    <inlineHelpText>On a scale of 1 to 10 – How reliable do you find the upload / download process?</inlineHelpText>
    <label>Reliability of upload/download</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>