unpackaged/main/default/objects/Feedback_Form__c/fields/Security_Sensitive_Data__c.field-meta.xml
<CustomField>
    <fullName>Security_Sensitive_Data__c</fullName>
    <inlineHelpText>On a scale of 1 to 10 – How security sensitive is the data you share on MX?</inlineHelpText>
    <label>Security Sensitive Data</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>