unpackaged/main/default/objects/Feedback_Form__c/fields/Which_OEM_do_you_use_MX_with__c.field-meta.xml
<CustomField>
    <fullName>Which_OEM_do_you_use_MX_with__c</fullName>
    <inlineHelpText>Which OEM do you use MX with?</inlineHelpText>
    <label>Which OEM do you use MX with?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lotus</fullName>
            </value>
            <value>
                <fullName>JLR</fullName>
            </value>
            <value>
                <fullName>Aston Martin</fullName>
            </value>
            <value>
                <fullName>Nissan</fullName>
            </value>
            <value>
                <fullName>Polestar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>