unpackaged/main/default/objects/Feedback_Form__c/fields/Would_you_recommend_MX__c.field-meta.xml
<CustomField>
    <fullName>Would_you_recommend_MX__c</fullName>
    <inlineHelpText>On a scale of 1 to 10 – How likely are you to recommend MX to a friend or colleague?</inlineHelpText>
    <label>Would you recommend MX?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>